src/objects/VPM_VendorWebformTranslations__mdt.object
<CustomObject>
    <description>VPM- Used to store all language &amp; their ISO Code</description>
    <fields>
        <fullName>ISOCode__c</fullName>
        <label>ISO Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor Webform Translations</label>
    <pluralLabel>Vendor Webform Translations</pluralLabel>
</CustomObject>